Add the CreatePostsV1 handle (#4)
Add migrations
Add tests
