# pkg/reddit-feed-api/reddit_feed_api.pb.go
@@ -222,6 +222,15 @@ type Post struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
+
+	Title          string `protobuf:"bytes,1,opt,name=title,proto3" json:"title,omitempty"`
+	Author         string `protobuf:"bytes,2,opt,name=author,proto3" json:"author,omitempty"`
+	Link           string `protobuf:"bytes,3,opt,name=link,proto3" json:"link,omitempty"`
+	Subreddit      string `protobuf:"bytes,4,opt,name=subreddit,proto3" json:"subreddit,omitempty"`
+	Content        string `protobuf:"bytes,5,opt,name=content,proto3" json:"content,omitempty"`
+	Score          uint64 `protobuf:"varint,6,opt,name=score,proto3" json:"score,omitempty"`
+	Promoted       bool   `protobuf:"varint,7,opt,name=promoted,proto3" json:"promoted,omitempty"`
+	NotSafeForWork bool   `protobuf:"varint,8,opt,name=not_safe_for_work,json=notSafeForWork,proto3" json:"not_safe_for_work,omitempty"`
 }
 
 func (x *Post) Reset() {
@@ -254,6 +263,62 @@ func (x *Post) ProtoReflect() protoreflect.Message {
 // Deprecated: Use Post.ProtoReflect.Descriptor instead.
 func (*Post) Descriptor() ([]byte, []int) {
 	return file_reddit_reddit_feed_api_v1_reddit_feed_api_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *Post) GetTitle() string {
+	if x != nil {
+		return x.Title
+	}
+	return ""
+}
+
+func (x *Post) GetAuthor() string {
+	if x != nil {
+		return x.Author
+	}
+	return ""
+}
+
+func (x *Post) GetLink() string {
+	if x != nil {
+		return x.Link
+	}
+	return ""
+}
+
+func (x *Post) GetSubreddit() string {
+	if x != nil {
+		return x.Subreddit
+	}
+	return ""
+}
+
+func (x *Post) GetContent() string {
+	if x != nil {
+		return x.Content
+	}
+	return ""
+}
+
+func (x *Post) GetScore() uint64 {
+	if x != nil {
+		return x.Score
+	}
+	return 0
+}
+
+func (x *Post) GetPromoted() bool {
+	if x != nil {
+		return x.Promoted
+	}
+	return false
+}
+
+func (x *Post) GetNotSafeForWork() bool {
+	if x != nil {
+		return x.NotSafeForWork
+	}
+	return false
 }
 
 type Feed struct {
@@ -326,31 +391,48 @@ var file_reddit_reddit_feed_api_v1_reddit_feed_api_proto_rawDesc = []byte{
 	0x65, 0x65, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1f, 0x2e, 0x72, 0x65, 0x64, 0x64,
 	0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61,
 	0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x46, 0x65, 0x65, 0x64, 0x52, 0x04, 0x66, 0x65, 0x65, 0x64,
-	0x22, 0x06, 0x0a, 0x04, 0x50, 0x6f, 0x73, 0x74, 0x22, 0x06, 0x0a, 0x04, 0x46, 0x65, 0x65, 0x64,
-	0x32, 0xa8, 0x02, 0x0a, 0x14, 0x52, 0x65, 0x64, 0x64, 0x69, 0x74, 0x46, 0x65, 0x65, 0x64, 0x41,
-	0x50, 0x49, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x85, 0x01, 0x0a, 0x0d, 0x43, 0x72,
-	0x65, 0x61, 0x74, 0x65, 0x50, 0x6f, 0x73, 0x74, 0x73, 0x56, 0x31, 0x12, 0x2f, 0x2e, 0x72, 0x65,
-	0x64, 0x64, 0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64,
-	0x5f, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6f,
-	0x73, 0x74, 0x73, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x30, 0x2e, 0x72,
-	0x65, 0x64, 0x64, 0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65,
-	0x64, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50,
-	0x6f, 0x73, 0x74, 0x73, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x11,
-	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0b, 0x22, 0x09, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x6f, 0x73, 0x74,
-	0x73, 0x12, 0x87, 0x01, 0x0a, 0x0e, 0x47, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x46, 0x65,
-	0x65, 0x64, 0x56, 0x31, 0x12, 0x30, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2e, 0x72, 0x65,
+	0x22, 0x93, 0x02, 0x0a, 0x04, 0x50, 0x6f, 0x73, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x69, 0x74,
+	0x6c, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x74, 0x69, 0x74, 0x6c, 0x65, 0x12,
+	0x36, 0x0a, 0x06, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x42,
+	0x1e, 0xfa, 0x42, 0x1b, 0x72, 0x19, 0x28, 0x0b, 0x32, 0x10, 0x5e, 0x74, 0x32, 0x5f, 0x5b, 0x61,
+	0x2d, 0x7a, 0x30, 0x2d, 0x39, 0x5d, 0x7b, 0x38, 0x7d, 0x24, 0x3a, 0x03, 0x74, 0x32, 0x5f, 0x52,
+	0x06, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x12, 0x1f, 0x0a, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x09, 0x42, 0x0b, 0xfa, 0x42, 0x08, 0x72, 0x06, 0x90, 0x01, 0x01, 0xd0,
+	0x01, 0x01, 0x52, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x12, 0x1c, 0x0a, 0x09, 0x73, 0x75, 0x62, 0x72,
+	0x65, 0x64, 0x64, 0x69, 0x74, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x73, 0x75, 0x62,
+	0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e,
+	0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74,
+	0x12, 0x1d, 0x0a, 0x05, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x04, 0x42,
+	0x07, 0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00, 0x52, 0x05, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x12,
+	0x1a, 0x0a, 0x08, 0x70, 0x72, 0x6f, 0x6d, 0x6f, 0x74, 0x65, 0x64, 0x18, 0x07, 0x20, 0x01, 0x28,
+	0x08, 0x52, 0x08, 0x70, 0x72, 0x6f, 0x6d, 0x6f, 0x74, 0x65, 0x64, 0x12, 0x29, 0x0a, 0x11, 0x6e,
+	0x6f, 0x74, 0x5f, 0x73, 0x61, 0x66, 0x65, 0x5f, 0x66, 0x6f, 0x72, 0x5f, 0x77, 0x6f, 0x72, 0x6b,
+	0x18, 0x08, 0x20, 0x01, 0x28, 0x08, 0x52, 0x0e, 0x6e, 0x6f, 0x74, 0x53, 0x61, 0x66, 0x65, 0x46,
+	0x6f, 0x72, 0x57, 0x6f, 0x72, 0x6b, 0x22, 0x06, 0x0a, 0x04, 0x46, 0x65, 0x65, 0x64, 0x32, 0xa8,
+	0x02, 0x0a, 0x14, 0x52, 0x65, 0x64, 0x64, 0x69, 0x74, 0x46, 0x65, 0x65, 0x64, 0x41, 0x50, 0x49,
+	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x85, 0x01, 0x0a, 0x0d, 0x43, 0x72, 0x65, 0x61,
+	0x74, 0x65, 0x50, 0x6f, 0x73, 0x74, 0x73, 0x56, 0x31, 0x12, 0x2f, 0x2e, 0x72, 0x65, 0x64, 0x64,
+	0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61,
+	0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6f, 0x73, 0x74,
+	0x73, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x30, 0x2e, 0x72, 0x65, 0x64,
+	0x64, 0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f,
+	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6f, 0x73,
+	0x74, 0x73, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x11, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x0b, 0x22, 0x09, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x6f, 0x73, 0x74, 0x73, 0x12,
+	0x87, 0x01, 0x0a, 0x0e, 0x47, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x46, 0x65, 0x65, 0x64,
+	0x56, 0x31, 0x12, 0x30, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2e, 0x72, 0x65, 0x64, 0x64,
+	0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47,
+	0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x46, 0x65, 0x65, 0x64, 0x56, 0x31, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x31, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2e, 0x72, 0x65,
 	0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31,
 	0x2e, 0x47, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x46, 0x65, 0x65, 0x64, 0x56, 0x31, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x31, 0x2e, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2e,
-	0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61, 0x70, 0x69, 0x2e,
-	0x76, 0x31, 0x2e, 0x47, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x46, 0x65, 0x65, 0x64, 0x56,
-	0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x10, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x0a, 0x12, 0x08, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x65, 0x65, 0x64, 0x42, 0x47, 0x5a, 0x45, 0x67,
-	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x61, 0x72, 0x74, 0x74, 0x65, 0x74,
-	0x2f, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2d, 0x66, 0x65, 0x65, 0x64, 0x2d, 0x61, 0x70, 0x69,
-	0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2d, 0x66, 0x65, 0x65, 0x64,
-	0x2d, 0x61, 0x70, 0x69, 0x3b, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64,
-	0x5f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x10, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0a, 0x12,
+	0x08, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x65, 0x65, 0x64, 0x42, 0x47, 0x5a, 0x45, 0x67, 0x69, 0x74,
+	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x61, 0x72, 0x74, 0x74, 0x65, 0x74, 0x2f, 0x72,
+	0x65, 0x64, 0x64, 0x69, 0x74, 0x2d, 0x66, 0x65, 0x65, 0x64, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70,
+	0x6b, 0x67, 0x2f, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x2d, 0x66, 0x65, 0x65, 0x64, 0x2d, 0x61,
+	0x70, 0x69, 0x3b, 0x72, 0x65, 0x64, 0x64, 0x69, 0x74, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x5f, 0x61,
+	0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
